# BookStackPageMerger

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/bookstack_page_orchestrator/: bookstack_client.py  config.py  main.py  orchestrator.py
tests/: test_orchestrator.py  test_webhook.py
